--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 Full Stack Java Developer
               </h3>
               <p class="home__description">
-                7+ years of experience and <strong>AWS Certified Solutions Architect – Associate</strong>, with expertise in AWS services.
+                8+ years of experience and <strong>AWS Certified Solutions Architect – Associate</strong>, with expertise in AWS services.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact me<i class="uil uil-message button__icon"></i>
@@ -153,7 +153,7 @@
 
           <div class="about__data">
             <p class="about__description">
-              With over 7 years of comprehensive experience, backed by expertise as an AWS Certified Solutions Architect. Strong technical background in web application development, proficient in backend technologies including Java and Spring Boot, as well as frontend frameworks such as JavaScript and React.js/Angular.js. Skilled in database management with SQL, MySQL, PostgreSQL, and MongoDB, and experienced with cloud platforms like AWS and Azure. Proficient in CI/CD pipelines and automation. Proven success in delivering end-to-end solutions and leading impactful projects.
+              With over 8+ years of comprehensive experience, backed by expertise as an AWS Certified Solutions Architect. Strong technical background in web application development, proficient in backend technologies including Java and Spring Boot, as well as frontend frameworks such as JavaScript and React.js/Angular.js. Skilled in database management with SQL, MySQL, PostgreSQL, and MongoDB, and experienced with cloud platforms like AWS and Azure. Proficient in CI/CD pipelines and automation. Proven success in delivering end-to-end solutions and leading impactful projects.
             </p>
 
             <div class="about__info">
@@ -177,12 +177,12 @@
             </div>
 
             <div class="about__buttons">
-              <a download="" href="assets\MyCV.pdf" class="button button--flex">
+              <!-- <a download="" href="assets\MyCV.pdf" class="button button--flex">
                 Download CV<i class="fas fa-download button__icon"></i>
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
       </section>
 
       <!--===================== SKILLS =====================-->
@@ -843,10 +843,10 @@
               <a href="#qualification" class="footer__link">Qualification</a>
             </li>
             <li>
-              <a href="#portfolio" class="footer__link">Portfolio</a>
+              <a href="#portfolio" class="footer__link">Work Experience</a>
             </li>
             <li>
-              <a href="#contact" class="footer__link">Contact-Me</a>
+              <!-- <a href="#contact" class="footer__link">Contact-Me</a> -->
             </li>
           </ul>
 
