--- a/index.html
+++ b/index.html
@@ -595,10 +595,10 @@
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
-                  Full Stack Java Developer
+                  •	Full Stack Java Developer – GAP INC, CA
                 </h3>
                 <p class="portfolio__description">
-                  Developed Angular services for seamless API integration, engineered components with a component-based architecture, and utilized TypeScript with MVVM for maintainable code. Architected microservices with Spring Boot and Kafka, implemented GraphQL APIs, and ensured security with Spring Security. Managed CI/CD pipelines with Jenkins, version control with GitHub, and leveraged AWS for scalable deployments.
+                  Developed a Ticket Management System to streamline IT support with Spring Boot microservices and RESTful APIs. Built a responsive React frontend with Redux and React-Router. Integrated real-time data streaming using Apache Kafka and deployed on AWS. Implemented CI/CD pipelines with Jenkins and Docker, ensuring security with Spring Security.
                 </p>
                 <!-- <a
                   href="https://github.com/Venkateeshh/DarkSurfer-Extension"
@@ -623,116 +623,105 @@
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
-                  Full Stack Java Developer
+                  •	Full Stack Java Developer - Elevance Health, Texas
                 </h3>
                 <p class="portfolio__description">
-                  Built single-page applications using React, Redux, and React-Router for seamless state management and dynamic routing. Enhanced front-end performance with React Hooks, lazy loading, and deployed on Azure for scalability. Integrated microservices with Spring Boot, streamlined CI/CD with Jenkins and Docker, and ensured robust testing with Jest and Mocha.
+                  Developed a scalable platform for consolidating healthcare data, including patient records and appointment scheduling. Employed Angular and Spring Boot for seamless frontend and backend integration, with MongoDB managing data storage. Utilized AWS services for deployment and Jenkins for continuous integration, ensuring reliable and efficient operations.
                 </p>
-                <!-- <a
-                  href="https://github.com/Venkateeshh/Weather-App"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  GitHub Repository
-                  <i class="uil uil-external-link-alt button__icon"></i>
-                </a>
-                <a
-                  href="https://venkateeshh.github.io/Weather-App/"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  See Live
-                  <i class="uil uil-external-link-alt button__icon"></i>
-                </a> -->
+<!--                 <a-->
+<!--                  href="https://github.com/Venkateeshh/Weather-App"-->
+<!--                  class="button button&#45;&#45;flex button&#45;&#45;small portfolio__button"-->
+<!--                >-->
+<!--                  GitHub Repository-->
+<!--                  <i class="uil uil-external-link-alt button__icon"></i>-->
+<!--                </a>-->
+<!--                <a-->
+<!--                  href="https://venkateeshh.github.io/Weather-App/"-->
+<!--                  class="button button&#45;&#45;flex button&#45;&#45;small portfolio__button"-->
+<!--                >-->
+<!--                  See Live-->
+<!--                  <i class="uil uil-external-link-alt button__icon"></i>-->
+<!--                </a> &ndash;&gt;-->
               </div>
             </div>
 
             <!-- ------------------------portfollio 3-------------------- -->
-            <!-- <div class="portfolio__content grid swiper-slide">
+            <div class="portfolio__content grid swiper-slide">
               <img src="assets/img/portfolio2.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Spotify-Clone</h3>
+                <h3 class="portfolio__title">•	Full Stack Java Developer- First Citizens BancShares, Raleigh, NC </h3>
                 <p class="portfolio__description">
-                  Spotify Clone is a web app developed using HTML, CSS, and
-                  JavaScript. It recreates Spotify's interface and features,
-                  allowing users to browse, search, and play songs, create
-                  playlists, and discover new music. Responsive design ensures a
-                  seamless experience on any device. Contributions are welcome!
+                  Developed the IntraLoan Portal to automate and streamline internal employee loan requests, enhancing the loan management process. Enabled employees to submit, monitor, and manage their loan applications with real-time status updates. Utilized Angular, Spring Boot, and AWS for a scalable and secure solution. Implemented CI/CD pipelines with Jenkins and Docker to automate deployment and ensure high-quality releases.
                 </p>
-                <a
-                  href="https://github.com/Venkateeshh/Spotify-Clone"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  GitHub Repository
-                  <i class="uil uil-external-link-alt button__icon"></i>
-                </a>
-                <a
-                  href="https://venkateeshh.github.io/Spotify-Clone/"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  See Live
-                  <i class="uil uil-external-link-alt button__icon"></i>
-                </a>
+<!--                <a-->
+<!--                  href="https://github.com/Venkateeshh/Spotify-Clone"-->
+<!--                  class="button button&#45;&#45;flex button&#45;&#45;small portfolio__button"-->
+<!--                >-->
+<!--                  GitHub Repository-->
+<!--                  <i class="uil uil-external-link-alt button__icon"></i>-->
+<!--                </a>-->
+<!--                <a-->
+<!--                  href="https://venkateeshh.github.io/Spotify-Clone/"-->
+<!--                  class="button button&#45;&#45;flex button&#45;&#45;small portfolio__button"-->
+<!--                >-->
+<!--                  See Live-->
+<!--                  <i class="uil uil-external-link-alt button__icon"></i>-->
+<!--                </a>-->
               </div>
             </div> -->
             <!-- ------------------------portfollio 4-------------------- -->
-            <!-- <div class="portfolio__content grid swiper-slide">
+             <div class="portfolio__content grid swiper-slide">
               <img src="assets/img/portfolio3.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Language Translator</h3>
+                <h3 class="portfolio__title">•	Full Stack Java Developer- Ambient Clinical Analytics, MN</h3>
                 <p class="portfolio__description">
-                  This language translator web app is a user-friendly tool built
-                  with HTML, CSS, and JavaScript. It leverages Google Translate
-                  API to seamlessly translate text between multiple languages.
-                  The app features a simple interface, ensuring smooth
-                  performance across devices..
+
+
+                  Developed ITAssetHub to streamline IT asset management with real-time tracking of asset status, location, and maintenance schedules. Utilized React.js for the user interface and Spring Boot for backend services, supported by MySQL for data management. Implemented Docker for containerization and Jenkins for automated deployment and CI/CD.
                 </p>
                 <a
-                  href="https://github.com/Venkateeshh/Js-Language-Translator"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  GitHub Repository
-                  <i class="uil uil-external-link-alt button__icon"></i>
-                </a>
-                <a
-                  href="https://venkateeshh.github.io/Js-Language-Translator/"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  See Live
-                  <i class="uil uil-external-link-alt button__icon"></i>
+<!--                  href="https://github.com/Venkateeshh/Js-Language-Translator"-->
+<!--                  class="button button&#45;&#45;flex button&#45;&#45;small portfolio__button"-->
+<!--                >-->
+<!--                  GitHub Repository-->
+<!--                  <i class="uil uil-external-link-alt button__icon"></i>-->
+<!--                </a>-->
+<!--                <a-->
+<!--                  href="https://venkateeshh.github.io/Js-Language-Translator/"-->
+<!--                  class="button button&#45;&#45;flex button&#45;&#45;small portfolio__button"-->
+<!--                >-->
+<!--                  See Live-->
+<!--                  <i class="uil uil-external-link-alt button__icon"></i>-->
                 </a>
               </div>
             </div> -->
 
             <!-- ------------------------portfollio 5-------------------- -->
-            <!-- <div class="portfolio__content grid swiper-slide">
+            <div class="portfolio__content grid swiper-slide">
               <img src="assets/img/portfolio4.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Sorting Visualizer</h3>
+                <h3 class="portfolio__title">•	Full Stack Java Developer- Accel Frontline Limited, Chennai, India</h3>
                 <p class="portfolio__description">
-                  Sorting Visualizer is a Java-based project that allows users
-                  to visualize various sorting algorithms in action using a
-                  Graphical User Interface (GUI). It provides an interactive and
-                  educational way to understand how different sorting algorithms
-                  work by visually demonstrating their step-by-step sorting
-                  process.
+                  Developed a Task Automation platform to streamline routine tasks with automated workflows. Designed responsive interfaces using HTML, CSS, and JavaScript, and created dynamic features with jQuery and Bootstrap. Built scalable RESTful APIs using Spring Boot, and managed data with SQL and JDBC. Implemented CI/CD pipelines with Jenkins and leveraged AWS for scalable deployment.
                 </p>
-                <a
-                  href="https://github.com/Venkateeshh/Sorting-Visualizer"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  GitHub Repository
-                  <i class="uil uil-external-link-alt button__icon"></i>
-                </a>
-                <a
-                  href="https://www.linkedin.com/posts/venkatesh-kamath-_algorithmdesign-sortingvisualizer-javaprojects-activity-7095437035125043200-fWDl?utm_source=share&utm_medium=member_desktop"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  See Live
-                  <i class="uil uil-external-link-alt button__icon"></i>
-                </a>
-              </div>
+<!--                <a-->
+<!--                  href="https://github.com/Venkateeshh/Sorting-Visualizer"-->
+<!--                  class="button button&#45;&#45;flex button&#45;&#45;small portfolio__button"-->
+<!--                >-->
+<!--                  GitHub Repository-->
+<!--                  <i class="uil uil-external-link-alt button__icon"></i>-->
+<!--                </a>-->
+<!--                <a-->
+<!--                  href="https://www.linkedin.com/posts/venkatesh-kamath-_algorithmdesign-sortingvisualizer-javaprojects-activity-7095437035125043200-fWDl?utm_source=share&utm_medium=member_desktop"-->
+<!--                  class="button button&#45;&#45;flex button&#45;&#45;small portfolio__button"-->
+<!--                >-->
+<!--                  See Live-->
+<!--                  <i class="uil uil-external-link-alt button__icon"></i>-->
+<!--                </a>-->
+<!--              </div>-->
             </div>
           </div> -->
 
@@ -743,8 +732,8 @@
           <div class="swiper-button-prev">
             <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
           </div> -->
-          <!-- add pagination -->
-          <!-- <div class="swiper-pagination"></div>
+          -- add pagination -->
+          <-- <div class="swiper-pagination"></div>
         </div>
       </section> -->
 
@@ -754,38 +743,36 @@
         <span class="section__subtitle">Get in touch</span>
 
         <div class="contact__container container grid">
-          <div>
-            <div class="contact__information">
-              <i class="uil uil-calling contact__icon"></i>
+          <div class="contact__information">
+            <i class="uil uil-calling contact__icon"></i>
 
-              <div>
-                <h3 class="contact__title">Contact Me</h3>
-                <span class="contact__subtitle"
-                  ><a href="tel:6362243314"></a>(469) 629-9336</span
-                >
-              </div>
+            <div>
+              <h3 class="contact__title">Contact Me</h3>
+              <span class="contact__subtitle"
+              ><a href="tel:6362243314"></a>(314) 673-3093</span
+              >
             </div>
+          </div>
 
-            <div class="contact__information">
-              <i class="uil uil-envelope-minus contact__icon"></i>
+          <div class="contact__information">
+            <i class="uil uil-envelope-minus contact__icon"></i>
 
-              <div>
-                <h3 class="contact__title">Email</h3>
-                <span class="contact__subtitle"
-                  >saivinayreddyy@gmail.com</span
-                >
-              </div>
+            <div>
+              <h3 class="contact__title">Email</h3>
+              <span class="contact__subtitle"
+              >saivinayreddyy@gmail.com</span
+              >
             </div>
+          </div>
 
-            <div class="contact__information">
-              <i class="uil uil-map-marker contact__icon"></i>
+          <div class="contact__information">
+            <i class="uil uil-map-marker contact__icon"></i>
 
-              <div>
-                <h3 class="contact__title">Location</h3>
-                <span class="contact__subtitle"
-                  >Saint Louis, Missouri</span
-                >
-              </div>
+            <div>
+              <h3 class="contact__title">Location</h3>
+              <span class="contact__subtitle"
+              >Saint Louis, Missouri</span
+              >
             </div>
           </div>
 
