--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
-                    2018- 2022
+                    2014- 2017
                   <!-- </div>
                   <span
                     class="button button--flex button--small button--link services__button"
@@ -595,10 +595,12 @@
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
-                  •	Full Stack Java Developer – GAP INC, CA
+                  • GAP INC, CA
                 </h3>
                 <p class="portfolio__description">
-                  Developed a Ticket Management System to streamline IT support with Spring Boot microservices and RESTful APIs. Built a responsive React frontend with Redux and React-Router. Integrated real-time data streaming using Apache Kafka and deployed on AWS. Implemented CI/CD pipelines with Jenkins and Docker, ensuring security with Spring Security.
+                 Full Stack Java Developer 
+                  </p>
+                  Jan 2023 - Present
                 </p>
                 <!-- <a
                   href="https://github.com/Venkateeshh/DarkSurfer-Extension"
@@ -626,7 +628,9 @@
                   •	Full Stack Java Developer - Elevance Health, Texas
                 </h3>
                 <p class="portfolio__description">
-                  Developed a scalable platform for consolidating healthcare data, including patient records and appointment scheduling. Employed Angular and Spring Boot for seamless frontend and backend integration, with MongoDB managing data storage. Utilized AWS services for deployment and Jenkins for continuous integration, ensuring reliable and efficient operations.
+                    Elevance Health, Texas
+                  </p>
+                    Feb 2021 - Dec 2022
                 </p>
 <!--                 <a-->
 <!--                  href="https://github.com/Venkateeshh/Weather-App"-->
@@ -650,9 +654,11 @@
               <img src="assets/img/portfolio2.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">•	Full Stack Java Developer- First Citizens BancShares, Raleigh, NC </h3>
+                <h3 class="portfolio__title">•	Full Stack Java Developer </h3>
                 <p class="portfolio__description">
-                  Developed the IntraLoan Portal to automate and streamline internal employee loan requests, enhancing the loan management process. Enabled employees to submit, monitor, and manage their loan applications with real-time status updates. Utilized Angular, Spring Boot, and AWS for a scalable and secure solution. Implemented CI/CD pipelines with Jenkins and Docker to automate deployment and ensure high-quality releases.
+                First Citizens BancShares, Raleigh, NC                
+                </p>
+                Jan 2020 - Feb 2021
                 </p>
 <!--                <a-->
 <!--                  href="https://github.com/Venkateeshh/Spotify-Clone"-->
@@ -675,11 +681,11 @@
               <img src="assets/img/portfolio3.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">•	Full Stack Java Developer- Ambient Clinical Analytics, MN</h3>
+                <h3 class="portfolio__title">•	Full Stack Java Developer</h3>
                 <p class="portfolio__description">
-
-
-                  Developed ITAssetHub to streamline IT asset management with real-time tracking of asset status, location, and maintenance schedules. Utilized React.js for the user interface and Spring Boot for backend services, supported by MySQL for data management. Implemented Docker for containerization and Jenkins for automated deployment and CI/CD.
+                  Ambient Clinical Analytics, MN
+                  </p>
+                    July 2017 - Jan 2020
                 </p>
                 <a
 <!--                  href="https://github.com/Venkateeshh/Js-Language-Translator"-->
@@ -703,9 +709,11 @@
               <img src="assets/img/portfolio4.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">•	Full Stack Java Developer- Accel Frontline Limited, Chennai, India</h3>
+                <h3 class="portfolio__title">•	Full Stack Java Developer</h3>
                 <p class="portfolio__description">
-                  Developed a Task Automation platform to streamline routine tasks with automated workflows. Designed responsive interfaces using HTML, CSS, and JavaScript, and created dynamic features with jQuery and Bootstrap. Built scalable RESTful APIs using Spring Boot, and managed data with SQL and JDBC. Implemented CI/CD pipelines with Jenkins and leveraged AWS for scalable deployment.
+                  Accel Frontline Limited, Chennai, India               
+                </p>
+                  Jun 2016 - July 2017
                 </p>
 <!--                <a-->
 <!--                  href="https://github.com/Venkateeshh/Sorting-Visualizer"-->
