--- a/index.html
+++ b/index.html
@@ -625,10 +625,10 @@
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
-                  •	Full Stack Java Developer - Elevance Health, Texas
+                  •	Full Stack Java Developer 
                 </h3>
                 <p class="portfolio__description">
-                    Elevance Health, Texas
+                    Caveonix, VA.
                   </p>
                     Feb 2021 - Dec 2022
                 </p>
