--- a/index.html
+++ b/index.html
@@ -765,12 +765,12 @@
           <div class="contact__information">
             <i class="uil uil-envelope-minus contact__icon"></i>
 
-            <div>
+<!--             <div>
               <h3 class="contact__title">Email</h3>
               <span class="contact__subtitle"
               >saivinayreddyy@gmail.com</span
               >
-            </div>
+            </div> -->
           </div>
 
           <div class="contact__information">
@@ -779,7 +779,7 @@
             <div>
               <h3 class="contact__title">Location</h3>
               <span class="contact__subtitle"
-              >Saint Louis, Missouri</span
+              >United States</span
               >
             </div>
           </div>
