--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 Full Stack Java Developer
               </h3>
               <p class="home__description">
-                8+ years of experience and <strong>AWS Certified Solutions Architect – Associate</strong>, with expertise in AWS services.
+                9+ years of experience <strong>AWS Certified Solutions Architect – Associate</strong>, <strong>AWS Certified Cloud Quest: Generative AI Practitioner</strong>Oracle Certified Java SE 11 Developer.</strong>
               </p>
               <a href="#contact" class="button button--flex">
                 Contact me<i class="uil uil-message button__icon"></i>
@@ -153,12 +153,12 @@
 
           <div class="about__data">
             <p class="about__description">
-              With over 8+ years of comprehensive experience, backed by expertise as an AWS Certified Solutions Architect. Strong technical background in web application development, proficient in backend technologies including Java and Spring Boot, as well as frontend frameworks such as JavaScript and React.js/Angular.js. Skilled in database management with SQL, MySQL, PostgreSQL, and MongoDB, and experienced with cloud platforms like AWS and Azure. Proficient in CI/CD pipelines and automation. Proven success in delivering end-to-end solutions and leading impactful projects.
+              With over 9+ years of comprehensive experience, as a Full Stack Java Developer, I have strong technical background in web application development, proficient in backend technologies including Java and Spring Boot, as well as frontend frameworks such as JavaScript and React.js/Angular.js. Skilled in database management with SQL, MySQL, PostgreSQL, and MongoDB, and experienced with cloud platforms like AWS and Azure. Proficient in CI/CD pipelines and automation. Proven success in delivering end-to-end solutions and leading impactful projects.
             </p>
 
             <div class="about__info">
               <div>
-                <span class="about__info-title">8+</span>
+                <span class="about__info-title">9+</span>
                 <span class="about__info-name">Years of <br />Experience</span>
               </div>
 
@@ -757,7 +757,7 @@
             <div>
               <h3 class="contact__title">Contact Me</h3>
               <span class="contact__subtitle"
-              ><a href="tel:6362243314"></a>(314) 673-3093</span
+              ><a href="tel:6362243314"></a>(314) 270-2588</span
               >
             </div>
           </div>
