--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 Full Stack Java Developer
               </h3>
               <p class="home__description">
-                9+ years of experience <strong>AWS Certified Solutions Architect – Associate</strong>, <strong>AWS Certified Cloud Quest: Generative AI Practitioner, </strong>Oracle Certified Java SE 11 Developer </strong>.
+                9+ years of experience <strong>AWS Certified Solutions Architect – Associate</strong>, <strong>AWS Certified Cloud Quest: Generative AI Practitioner,</strong> </strong>Oracle Certified Java SE 11 Developer</strong>.</strong>
               </p>
               <a href="#contact" class="button button--flex">
                 Contact me<i class="uil uil-message button__icon"></i>
